--- a/package.json
+++ b/package.json
@@ -1,80 +1,86 @@
 {
-  "name": "glimpses",
-  "author": "James Benns",
-  "version": "0.0.0",
-  "homepage": "http://jamesbenns.com/",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "4.1.0",
-    "@angular/compiler": "4.1.0",
-    "@angular/compiler-cli": "4.1.0",
-    "@angular/core": "4.1.0",
-    "@angular/forms": "4.1.0",
-    "@angular/http": "4.1.0",
-    "@angular/platform-browser": "4.1.0",
-    "@angular/platform-browser-dynamic": "4.1.0",
-    "@ionic-native/core": "3.6.1",
-    "@ionic-native/in-app-browser": "3.6.1",
-    "@ionic-native/network": "^3.7.0",
-    "@ionic-native/splash-screen": "3.6.1",
-    "@ionic-native/status-bar": "3.6.1",
-    "@ionic/storage": "^2.0.1",
-    "cordova-android": "^6.2.3",
-    "cordova-plugin-console": "1.0.5",
-    "cordova-plugin-device": "1.1.4",
-    "cordova-plugin-network-information": "^1.3.3",
-    "cordova-plugin-splashscreen": "~4.0.1",
-    "cordova-plugin-statusbar": "2.2.1",
-    "cordova-plugin-whitelist": "1.3.1",
-    "cordova-sqlite-storage": "^2.0.4",
-    "ionic-angular": "3.2.0",
-    "ionic-plugin-keyboard": "~2.2.1",
-    "ionicons": "3.0.0",
-    "rxjs": "5.1.1",
-    "sw-toolbox": "3.4.0",
-    "zone.js": "0.8.10"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "^1.3.7",
-    "@ionic/cli-plugin-ionic-angular": "1.0.0",
-    "typescript": "2.2.1"
-  },
-  "cordovaPlugins": [
-    "ionic-plugin-keyboard",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-console",
-    "cordova-plugin-statusbar",
-    "cordova-plugin-device",
-    "cordova-plugin-splashscreen"
-  ],
-  "cordovaPlatforms": [
-    "ios",
-    {
-      "platform": "ios",
-      "version": "",
-      "locator": "ios"
-    }
-  ],
-  "description": "Glimpses 2017 app",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-console": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-whitelist": {},
-      "ionic-plugin-keyboard": {},
-      "cordova-sqlite-storage": {},
-      "cordova-plugin-network-information": {}
+    "name": "glimpses",
+    "author": "James Benns",
+    "version": "0.0.0",
+    "homepage": "http://jamesbenns.com/",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
     },
-    "platforms": [
-      "android"
-    ]
-  }
+    "dependencies": {
+        "@angular/common": "4.1.0",
+        "@angular/compiler": "4.1.0",
+        "@angular/compiler-cli": "4.1.0",
+        "@angular/core": "4.1.0",
+        "@angular/forms": "4.1.0",
+        "@angular/http": "4.1.0",
+        "@angular/platform-browser": "4.1.0",
+        "@angular/platform-browser-dynamic": "4.1.0",
+        "@ionic-native/core": "3.6.1",
+        "@ionic-native/in-app-browser": "^3.6.1",
+        "@ionic-native/network": "^3.7.0",
+        "@ionic-native/splash-screen": "3.6.1",
+        "@ionic-native/status-bar": "3.6.1",
+        "@ionic-native/vibration": "^3.9.2",
+        "@ionic/storage": "^2.0.1",
+        "cordova-android": "^6.2.3",
+        "cordova-plugin-console": "1.0.5",
+        "cordova-plugin-device": "1.1.4",
+        "cordova-plugin-inappbrowser": "^1.7.1",
+        "cordova-plugin-network-information": "^1.3.3",
+        "cordova-plugin-splashscreen": "~4.0.1",
+        "cordova-plugin-statusbar": "2.2.1",
+        "cordova-plugin-vibration": "^2.1.5",
+        "cordova-plugin-whitelist": "1.3.1",
+        "cordova-sqlite-storage": "^2.0.4",
+        "ionic-angular": "3.2.0",
+        "ionic-plugin-keyboard": "~2.2.1",
+        "ionicons": "3.0.0",
+        "rxjs": "5.1.1",
+        "sw-toolbox": "3.4.0",
+        "zone.js": "0.8.10"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "^1.3.7",
+        "@ionic/cli-plugin-cordova": "^1.1.2",
+        "@ionic/cli-plugin-ionic-angular": "1.1.2",
+        "typescript": "2.2.1"
+    },
+    "cordovaPlugins": [
+        "ionic-plugin-keyboard",
+        "cordova-plugin-whitelist",
+        "cordova-plugin-console",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-device",
+        "cordova-plugin-splashscreen"
+    ],
+    "cordovaPlatforms": [
+        "ios",
+        {
+            "platform": "ios",
+            "version": "",
+            "locator": "ios"
+        }
+    ],
+    "description": "Glimpses 2017 app",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {},
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-vibration": {}
+        },
+        "platforms": [
+            "android"
+        ]
+    }
 }
